--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".EventDescriptionActivity"
-            android:label="@string/title_activity_event_description" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +19,18 @@
         <activity
             android:name=".NewInvoiceActivity"
             android:label="@string/title_activity_new_invoice" >
+        </activity>
+        <activity
+            android:name=".EventDescriptionActivity"
+            android:label="@string/title_activity_event_description" >
+        </activity>
+        <activity
+            android:name=".CreateEventActivity"
+            android:label="@string/title_activity_create_event" >
+        </activity>
+        <activity
+            android:name=".FriendsActivity"
+            android:label="@string/title_activity_friends" >
         </activity>
     </application>
 
